# EchoNote

./: .gitignore  .replit  CALENDAR_SETUP.md  README.md  main.py  pyproject.toml  replit.md
